# indian-trader

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  _run_combos.sh  _tmp_combo_test.py  _tmp_sensitivity_test.py  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  code-reviewer.md  coder.md  debugger.md  docs-agent.md  github-agent.md  tester.md
.claude/rules/: agents-build.md  agents-trading.md  data.md  phases.md  risk.md  strategy.md
dashboard/: index.html  server.py
data/: trading.db-shm  trading.db-wal
docs/: BACKTEST_AUDIT.md  DECISIONS.md  INTERVIEW_PREP.md  SYSTEM.md  WALKFORWARD_RESULTS.md  connections.md
docs/context/: current-state.md  db-schema.md  decisions-log.md  interfaces.md
docs/specs/: 2026-03-22-cleaner.md  2026-03-22-fetcher.md  2026-03-22-fundamentals.md  2026-03-22-logger.md  2026-03-22-notifier.md  2026-03-22-settings.md  2026-03-22-validator.md  2026-03-24-main.md  2026-03-24-paper-trader.md  2026-03-24-quality-filter.md  2026-03-24-technical-indicators.md  2026-03-25-backtest-runner.md  2026-03-25-historical-fundamentals.md  2026-03-25-momentum.md  2026-03-25-regime.md  (+14 more)
graphify-out/: .chunk1_files.txt  .chunk2_files.txt  .graphify_ast.json  .graphify_chunk_01.json  .graphify_communities.json  .graphify_detect.json  .graphify_labels.json  .graphify_python  .graphify_scores.json  .graphify_semantic.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: run_session.sh  run_tomorrow.sh  verify_paper_trader.py
tests/: test_main.py
(+53 files in other folders)
