[project]
name = "indian-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "yfinance>=0.2.40",
    "jugaad-data>=0.26",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "pandas-ta>=0.3.14b1",
    "backtesting>=0.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pytest>=8.0.0",
    "mypy>=1.0.0",
]
